--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <div class="hedding">
   <h1>DC Circuit</h1>
+  <p><b>Important point to remember</b></p>
 </div>
 
  <div class="container" style="margin-top:40px; margin-left: 365px; margin-right: 365px;"><div class="row"><div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
@@ -48,7 +49,7 @@
 
 </div></div></div>
 
- <div class="container2" style="margin-top:40px; margin-left: 0px; margin-right: 0px;"><div class="row"><div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+ <div class="container2" style="margin-top:40px; margin-left: 10px; margin-right: 10px;"><div class="row"><div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
 
 <div class="panel panel-default panel-table">
     <div class="panel-heading">
